--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <div class="field-container">
           <form action="#" class="field-form">
             <div class="field-form-group">
-              <label for="job-head">
+              <label for="job-title">
                 <i class="bx bx-search field-icon"></i>
                 <input
-                  id="job-head"
+                  id="job-title"
                   class="field-form-input"
                   type="text"
                   placeholder="Filter by title, companies, expertise…"
@@ -93,27 +93,6 @@
     <main class="jobs">
       <div class="container">
         <div class="jobs-section">
-          <div class="jobs-item">
-            <div class="jobs-item_image">
-              <img src="./assets/images/job_ex.svg" alt="" />
-            </div>
-            <div class="jobs-item_container">
-              <div class="jobs-item_details">
-                <p>5h ago</p>
-                <div class="oval">
-                    <img src="./assets/images/Oval.svg" alt="">
-                </div>
-                <p>Full Time</p>
-              </div>
-              <a href="/job-details.html" class="jobs-item_info">
-                Senior Software Engineer
-              </a>
-              <div class="jobs-item_company">Scoot</div>
-            </div>
-            <div class="jobs-item_footer">
-              <p class="jobs-item_location">United Kingdom</p>
-            </div>
-          </div>
         </div>
         <div class="jobs-footer">
           <button class="button button-default">Load More</button>
