job details light mode + auto search

--- a/job-details.html
+++ b/job-details.html
@@ -45,7 +45,115 @@
       </div>
     </nav>
     <!-- navbar end -->
-    
+
+    <header>
+      <div class="job_company job_container">
+        <div class="company_img">
+          <img src="./assets/images/job_photo.svg" alt="" />
+        </div>
+        <div class="company_name">
+          <p>Scoot</p>
+          <p>scoot.com</p>
+        </div>
+        <div class="button button-secondary">Company Site</div>
+      </div>
+    </header>
+
+    <main>
+      <div class="job_details job_container">
+        <div class="job-title">
+          <div class="job-left">
+            <div class="job-date">
+              <p>1w ago</p>
+              <img src="./assets/images/Oval.svg" alt="" />
+              <p>Part Time</p>
+            </div>
+            <div class="job-name">Senior Software Engineer</div>
+            <div class="job-location">United Kingdom</div>
+          </div>
+          <div>
+            <div class="button button-default">Apply Now</div>
+          </div>
+        </div>
+        <div class="job-description-details">
+          <div class="jobs-description">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus
+            hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque,
+            aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula
+            sollicitudin laoreet viverra, tortor libero sodales leo, eget
+            blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse
+            potenti. Sed egestas, ante et vulputate volutpat, eros pede semper
+            est, vitae luctus metus libero eu augue. Morbi purus libero,
+            faucibus adipiscing, commodo quis, gravida id, est. Sed lectus.
+            Praesent elementum hendrerit tortor. Sed semper lorem at felis.
+            Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod
+            dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu,
+            dapibus eu, fermentum et, dapibus sed, urna.
+          </div>
+          <div class="jobs-description-item">
+            <h2 class="jobs-description-title">Requirements</h2>
+            <div class="jobs-description">
+              Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia,
+              magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae
+              facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis,
+              adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse
+              ac urna. Etiam pellentesque mauris ut lectus. Nunc tellus ante,
+              mattis eget, gravida vitae, ultricies ac, leo. Integer leo pede,
+              ornare a, lacinia eu, vulputate vel, nisl.
+            </div>
+            <ul>
+              <li>Morbi interdum mollis sapien. Sed</li>
+              <li>
+                Phasellus lacinia magna a ullamcorper laoreet, lectus arcu
+                pulvinar risus
+              </li>
+              <li>
+                Mauris nibh felis, adipiscing varius, adipiscing in, lacinia
+                vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut
+                lectus.
+              </li>
+              <li>Morbi interdum mollis sapien. Sed</li>
+            </ul>
+          </div>
+          <div class="jobs-description-item">
+            <h2 class="jobs-description-title">What You Will Do</h2>
+            <div class="jobs-description">
+              Sed egestas, ante et vulputate volutpat, eros pede semper est,
+              vitae luctus metus libero eu augue. Morbi purus libero, faucibus
+              adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent
+              elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum
+              volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu
+              pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu,
+              fermentum et, dapibus sed, urna.              
+            </div>
+            <ol>
+              <li>Morbi interdum mollis sapien. Sed</li>
+              <li>
+                Phasellus lacinia magna a ullamcorper laoreet, lectus arcu
+                pulvinar risus
+              </li>
+              <li>
+                Mauris nibh felis, adipiscing varius, adipiscing in, lacinia
+                vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut
+                lectus.
+              </li>
+              <li>Morbi interdum mollis sapien. Sed</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="footer_container job_container">
+        <div class="footer-job">
+          <div class="footer-name">Senior Software Engineer</div>
+          <p class="footer-detail">So Digital Inc</p>
+        </div>
+        <div>
+          <div class="button button-default">Apply Now</div>
+        </div>
+      </div>
+    </footer>
 
     <script src="./assets/js/main.js"></script>
   </body>
